--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -13,6 +13,7 @@
     "express": "~4.14.0",
     "express-ejs-layouts": "^2.2.0",
     "morgan": "~1.7.0",
+    "nodemon": "^1.12.1",
     "serve-favicon": "~2.3.0"
   }
 }
