--- a/starter_code/package.json
+++ b/starter_code/package.json
@@ -7,14 +7,22 @@
     "dev": "DEBUG=uber-for-loundry:* nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "dotenv": "~4.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "req-flash": "0.0.3",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
